src/objects/AutomateEmailTrigger__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to automate email triggers</description>
    <fields>
        <fullName>Email_Body__c</fullName>
        <label>Email Body</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <label>Email Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExactMatchCondition__c</fullName>
        <label>ExactMatchCondition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PartialMatchCondition__c</fullName>
        <label>PartialMatchCondition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Team_Members__c</fullName>
        <label>Team Members</label>
        <type>TextArea</type>
    </fields>
    <label>AutomateEmailTrigger</label>
</CustomObject>